Changed layout issues
yay :)

--- a/Templates/rawhtml/Project2/css/global.css
+++ b/Templates/rawhtml/Project2/css/global.css
@@ -36,7 +36,6 @@
 /* ------------------------------------------------------------------------ */
 
 .main {
-	margin: 20px 10px;
 	margin: 0;
 	padding: 10px;
 }
@@ -99,6 +98,11 @@
     .stickysticky {
         position: static;
     }
+
+    html {
+        overflow-x: hidden
+    }
+
 }
 
 /* Large Display */
@@ -108,6 +112,7 @@
 
 
 /* ------------------------------------------------------------------------ */
+
 
 body {
 	margin: 0;
